fixed queue item titles wrapping into new line and breaking ui

--- a/src/scss/queue.scss
+++ b/src/scss/queue.scss
@@ -146,6 +146,10 @@ $macosblue: #1e5cce;
 .queue-item-title {
   font-size: 8pt;
   margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 69%;
+  white-space: nowrap;
 }
 
 .queue-item-mode {
@@ -344,6 +348,7 @@ $macosblue: #1e5cce;
   transition: 0.2s;
   margin-top: 7px;
   text-align: center;
+
   &:invalid {
     border: 2px solid #ff3434;
   }
@@ -361,6 +366,7 @@ $macosblue: #1e5cce;
   box-shadow: 0 4px 20px 0 rgb(0 0 0 / 10%);
   color: #8b8b8b;
   transition: color 300ms linear, background 0.2s;
+
   &:hover {
     cursor: pointer;
     background: rgba(80, 80, 80, 0.85);
